// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Image tests should create image with AspectRatio 1`] = `
{
  "type": "image",
  "aspect": {
    "ratio": 0.75
  },
  "height": {
    "type": "fixed",
    "value": 44
  },
  "image_url": "https://i.imgur.com/qNJQKU8.png",
  "width": {
    "type": "fixed",
    "value": 44
  }
}
`;

exports[`Image tests should create image with AspectRatio from Template 1`] = `
{
  "templates": {
    "card": {
      "type": "image",
      "aspect": {
        "$ratio": "aspectRatio"
      },
      "height": {
        "type": "fixed",
        "value": 44
      },
      "image_url": "https://i.imgur.com/qNJQKU8.png",
      "width": {
        "type": "fixed",
        "value": 44
      }
    }
  },
  "card": {
    "log_id": "id",
    "states": [
      {
        "state_id": 1,
        "div": {
          "type": "card",
          "aspectRatio": 1
        }
      }
    ]
  }
}
`;

exports[`Image tests should create image with extension 1`] = `
{
  "type": "image",
  "extensions": [
    {
      "id": "image_extension",
      "params": {
        "type": "image"
      }
    }
  ],
  "height": {
    "type": "fixed",
    "value": 44
  },
  "image_url": "https://i.imgur.com/qNJQKU8.png",
  "width": {
    "type": "fixed",
    "value": 44
  }
}
`;

exports[`Image tests should create image with preload 1`] = `
{
  "type": "image",
  "height": {
    "type": "fixed",
    "value": 44
  },
  "image_url": "https://i.imgur.com/qNJQKU8.png",
  "preload_required": 1,
  "width": {
    "type": "fixed",
    "value": 44
  }
}
`;

exports[`Image tests should create image with preview 1`] = `
{
  "type": "image",
  "height": {
    "type": "fixed",
    "value": 44
  },
  "high_priority_preview_show": 1,
  "image_url": "https://i.imgur.com/qNJQKU8.png",
  "preview": "test_preview",
  "width": {
    "type": "fixed",
    "value": 44
  }
}
`;

exports[`Image tests should create image with tooltip 1`] = `
{
  "type": "image",
  "height": {
    "type": "fixed",
    "value": 44
  },
  "image_url": "https://i.imgur.com/qNJQKU8.png",
  "tooltips": [
    {
      "id": "example_tooltip",
      "position": "bottom-left",
      "div": {
        "type": "text",
        "text": "test"
      }
    }
  ],
  "width": {
    "type": "fixed",
    "value": 44
  }
}
`;
